performance turning for keydown with many KaTeX

--- a/style/nt.ele.css
+++ b/style/nt.ele.css
@@ -13,7 +13,13 @@ body {
 }
 
 div#backbox{
-    position: fixed; 
+    position: fixed;
+ 
+    /* for GPU acceleration */
+    -webkit-transform: translate3d(0, 0, 0);
+    -webkit-backface-visibility: hidden;
+    -webkit-perspective: 1000;
+ 
     top: 0px; 
     left: 0px; 
     bottom: 0px;
