--- a/style/nt.print.css
+++ b/style/nt.print.css
@@ -1,25 +1,27 @@
 
 /* This CSS should be load after user CSS
-  because "@media print" is sametimes ignored if user CSS is loaded after this CSS.*/
+  because "@media print" is sometimes ignored if user CSS is loaded after this CSS.*/
 
 @page{        
     size: A4;
 /*  本来は以下の記述で良いはずが、Chromium系バグで設定値より大きくなってしまう
-    margin-left:   15mm;
-    margin-right:  15mm;
+    margin-left:   20mm;
+    margin-right:  20mm;
     margin-top:    20mm;
     margin-bottom: 20mm;
     回避策として以下のように%で指定する
     margin-top, margin-bottomの設定は複雑
         Chrome, Firefox, Edge(Chromium)ページ横幅に対する割合を設定する
         Edge(Legacy)ページ縦幅に対する割合を設定する
-    7.143% = 15mm / 210mm,  9.524% = 20mm / 210mm != 20mm / 297mm
+    7.1428% = 15mm / 210mm
+    9.5238% = 20mm / 210mm != 20mm / 297mm
+    11.9047% = 25mm / 210mm != 25mm / 297mm
     ただしでは
 */
-    margin-left:   7.143%;
-    margin-right:  7.143%;
-    margin-top:    9.524%;
-    margin-bottom: 9.524%;
+    margin-left:    9.524%;
+    margin-right:   9.524%;
+    margin-top:    11.905%;
+    margin-bottom: 11.905%;
 }
 
 
