--- a/style/nt.web.css
+++ b/style/nt.web.css
@@ -26,26 +26,46 @@ div#backbox{
 div.modal1{
     display: none;
     position: fixed;
-    top: 5%;
-    left: 5%;
+    top: 0px;
+    left: 0px;
+    right: 0px; 
+    bottom: 0px;
     z-index: 9999;
     background: #c0dcff; 
-    width: 90%; 
-    height: 90%;
-    padding: 5mm;
+    padding: 12px;
+    /*padding-top: 32pt;*/
 }
 div.modaltext{
-    width:100%; 
-    height:100%; 
-    background: #ffffff; 
-    overflow: scroll; 
+    position: absolute;
+    top: 48px;
+    bottom: 24px;
+    left: 24px;
+    right: 24px;
+    padding: 0;
+    margin: 0;
+}
+div.modaltext textarea{
+    width: 100%;
+    height: 100%;
+    overflow: auto; 
     white-space: pre-wrap;
-    font-family: monospace;        
+    font-family: monospace;
 }
-div.close{
-    position:absolute; top:0; right:0; 
-    background: #67c8f5; font-size: 24pt; font-weight: bold; padding-left: 10px; padding-right: 10px; border-radius: 10px; border: solid 2px #000000;
+.modalbutton{
+    height:32px; 
+    background: #67c8f5; 
+    font-size: 16pt;
+    font-family: sans-serif;
+    font-weight: bold;
+    text-align: center;
+    text-decoration: none;
+    padding-left: 10px;
+    padding-right: 10px;
+    border-radius: 10px;
+    border: solid 1px #000000;
+    cursor: pointer;
 }
+
 div.logo{
     display:inline;
     padding-left: 10px; padding-right: 10px; 
