--- a/style/notoserif.css
+++ b/style/notoserif.css
@@ -1,19 +1,23 @@
 
 
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&display=swap');
+
 @font-face {
-    font-family: 'Noto Serif JP';
+    font-family: 'nt-Noto Serif JP';
     font-style: normal;
     font-weight: normal;
-    src: url('../font/Noto_Serif_JP/NotoSerifJP-Regular.otf') format('opentype');
+    src: url('../font/Noto_Serif_JP/NotoSerifJP-Regular.otf') format('opentype'),
+         local('Noto Serif JP');
     font-display: swap;
 }
 
 
 @font-face {
-    font-family: 'Noto Serif JP';
+    font-family: 'nt-Noto Serif JP';
     font-style: normal;
     font-weight: bold;
-    src: url('../font/Noto_Serif_JP/NotoSerifJP-Bold.otf') format('opentype');
+    src: url('../font/Noto_Serif_JP/NotoSerifJP-Bold.otf') format('opentype'),
+         local('Noto Serif JP');
     font-display: swap;
 }
 
@@ -31,7 +35,7 @@ div#paper {
 
     /* user settings */
     font-size: 11pt;
-    font-family: "NotoSerifJP","Noto Serif JP","BIZ UDPMincho","MS PMincho","YuMincho",serif;
+    font-family: "nt-Noto Serif JP","BIZ UDPMincho","YuMincho","MS PMincho",serif;
     background: white;
     color: black;
 }
