--- a/style/notoserif.css
+++ b/style/notoserif.css
@@ -1,6 +1,10 @@
 
 
+/*
 @import url('https://fonts.googleapis.com/css2?family=Noto+Serif+JP:wght@400;700&display=swap');
+*/
+@import url('./imp_NotoSerifJP.css2');
+
 @font-face {
     font-family: 'local-Noto Serif JP';
     font-style: normal;
